<resources>
    <string name="app_name">Movie Quiz</string>

    <string name="hello_world">Welcome to Movie Quiz!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz">QuizActivity</string>

    <string name="take_button">Take Quiz</string>
    <string name="stat_button">Show Statistics</string>
    <string name="title_activity_stat">StatActivity</string>
    <string name="quiz_stat">Quiz Statistics</string>
    <string name="quiz_take">Movie Quiz</string>
    <string name="scoreString">Your total Score:</string>
    <string name="attemptString">Number of Attempts:</string>
    <string name="spentString">Time spent on each question:</string>
    <string name="incorrectString">Number of Incorrect answers:</string>
    <string name="correctString">Number of Correct answers:</string>
</resources>
