<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.uci.moviequiz.StatActivity">

    <TextView android:text="@string/quiz_stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleStat"
        android:padding="10sp"
        android:textColor="#0064A4"
        android:textSize="25sp"
        android:textAlignment="gravity"
        android:gravity="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleStat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/scoreString"
                android:id="@+id/scoreLabel"
                android:layout_column="0"
                android:padding="10sp"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="3253325"
                android:id="@+id/scoreValue"
                android:layout_column="1"
                android:padding="10sp"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/attemptString"
                android:id="@+id/attemptLabel"
                android:layout_column="0"
                android:padding="10sp"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/attemptValue"
                android:layout_column="1"
                android:padding="10sp"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/correctString"
                android:id="@+id/correctLabel"
                android:layout_column="0"
                android:padding="10sp"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/correctValue"
                android:layout_column="1"
                android:padding="10sp"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/incorrectString"
                android:id="@+id/incorrectLabel"
                android:layout_column="0"
                android:padding="10sp"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="536143232"
                android:id="@+id/incorrectValue"
                android:layout_column="1"
                android:padding="10sp"
                android:gravity="left" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1.0">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/spentString"
                android:id="@+id/spentLabel"
                android:layout_column="0"
                android:padding="10sp"
                android:gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/spentValue"
                android:layout_column="1"
                android:padding="10sp"
                android:gravity="left" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
